Fix to confirmation tab on mobile

--- a/src/targets/meandall/styles/views/reservation.less
+++ b/src/targets/meandall/styles/views/reservation.less
@@ -369,6 +369,8 @@ main.reservation-page {
       font-family: @ff-bold;
     }
     .nav-tabs li {
+      width:33%;
+      line-height:1.4em;
       background: @c-secondary;
       a {
         color: @c-primary;
